--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@expo/vector-icons": "^5.2.0",
     "native-base": "^2.3.2",
     "react": "16.0.0-beta.5",
+    "react-base": "^0.2.0",
+    "react-bootstrap-table": "^4.0.6",
     "react-native": "0.49.3",
     "react-native-htmlview": "^0.12.0",
+    "react-native-router-flux": "^4.0.0-beta.22",
     "render-if": "^0.1.1"
   },
   "devDependencies": {
