--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-base": "^0.2.0",
     "react-bootstrap-table": "^4.0.6",
     "react-native": "0.49.3",
+    "react-native-drawer": "^2.5.0",
     "react-native-htmlview": "^0.12.0",
     "react-native-router-flux": "^4.0.0-beta.22",
     "render-if": "^0.1.1"
