--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-table": "^4.0.6",
     "react-native": "0.49.3",
     "react-native-drawer": "^2.5.0",
+    "react-native-foldview": "^1.1.1",
     "react-native-htmlview": "^0.12.0",
     "react-native-radio-button": "^2.0.1",
     "react-native-router-flux": "^4.0.0-beta.22",
