--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-native-drawer": "^2.5.0",
     "react-native-foldview": "^1.1.1",
     "react-native-htmlview": "^0.12.0",
+    "react-native-prompt": "^1.0.0",
+    "react-native-prompt-android": "^0.3.1",
     "react-native-radio-button": "^2.0.1",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-simple-radio-button": "^2.7.0",
