--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.facebook.react:react-native:+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile ('com.google.android.gms:play-services-gcm:8.1.0') {
+        force = true;
+    }
+    compile project(':react-native-push-notification')
+
+
 }
 
 // Run this once to be able to run the application with BUCK
