--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+MYAPP_RELEASE_STORE_FILE=brandprofiling.keystore
+MYAPP_RELEASE_KEY_ALIAS=brandprofiling
+MYAPP_RELEASE_STORE_PASSWORD=vjtpqtusapp
+MYAPP_RELEASE_KEY_PASSWORD=vjtpqtusapp
