--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "react-bootstrap-table": "^4.0.6",
     "react-native": "0.49.3",
     "react-native-drawer": "^2.5.0",
+    "react-native-dropdown": "0.0.6",
     "react-native-exit-app": "^1.0.0",
+    "react-native-fbsdk": "^0.6.3",
     "react-native-foldview": "^1.1.1",
     "react-native-htmlview": "^0.12.0",
+    "react-native-material-dropdown": "^0.5.2",
     "react-native-prompt": "^1.0.0",
     "react-native-prompt-android": "^0.3.1",
     "react-native-radio-button": "^2.0.1",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-selectbox": "^0.1.2",
+    "react-native-selectme": "^1.2.3",
     "react-native-simple-radio-button": "^2.7.0",
     "react-native-simple-toast": "0.0.7",
     "react-native-webview": "^1.0.8",
