--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,8 +102,8 @@ android {
         applicationId "com.brandprofilingapp"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 5
-        versionName "1.2.0.3"
+        versionCode 6
+        versionName "1.2.0.4"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -150,6 +150,7 @@ android {
 
 dependencies {
     compile project(':react-native-fbsdk')
+    compile project(':react-native-fcm')
     compile fileTree(dir: "libs", include: ["*.jar"])
     // From node_modules
     compile "com.android.support:appcompat-v7:24.0.1" // 변경
