--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'brandprofilingApp'
 include ':react-native-fbsdk'
 project(':react-native-fbsdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fbsdk/android')
+include ':react-native-fcm'
+project(':react-native-fcm').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fcm/android')
 
 include ':app'
