--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-dropdown": "0.0.6",
     "react-native-exit-app": "^1.0.0",
     "react-native-fbsdk": "^0.6.3",
+    "react-native-fcm": "^10.0.3",
     "react-native-foldview": "^1.1.1",
     "react-native-material-dropdown": "^0.5.2",
     "react-native-prompt": "^1.0.0",
