--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "react-native-fcm": "^10.0.3",
     "react-native-foldview": "^1.1.1",
     "react-native-material-dropdown": "^0.5.2",
-    "react-native-prompt": "^1.0.0",
-    "react-native-prompt-android": "^0.3.1",
     "react-native-radio-button": "^2.0.1",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-selectbox": "^0.1.2",
     "react-native-selectme": "^1.2.3",
     "react-native-simple-radio-button": "^2.7.0",
     "react-native-simple-toast": "0.0.7",
+    "react-native-switch-pro": "^0.4.6",
     "react-native-webview": "^1.0.8",
     "render-if": "^0.1.1"
   },
