--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,15 +95,15 @@ def enableProguardInReleaseBuilds = false
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '26'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.0'
 
     defaultConfig {
         applicationId "com.brandprofilingapp"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 9
-        versionName "1.2.0.8"
+        versionCode 11
+        versionName "1.2.0.10"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -117,14 +117,14 @@ android {
         }
     }
     signingConfigs {
-            release {
-                if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
-                    storeFile file(MYAPP_RELEASE_STORE_FILE)
-                    storePassword MYAPP_RELEASE_STORE_PASSWORD
-                    keyAlias MYAPP_RELEASE_KEY_ALIAS
-                    keyPassword MYAPP_RELEASE_KEY_PASSWORD
-                }
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
             }
+        }
     }
     buildTypes {
         release {
@@ -151,19 +151,22 @@ android {
 dependencies {
     compile project(':react-native-fbsdk')
     compile project(':react-native-fcm')
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     // From node_modules
-    compile "com.android.support:appcompat-v7:24.0.1" // 변경
+    compile 'com.android.support:appcompat-v7:26+'
+    // 변경
     compile 'com.facebook.react:react-native:+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
-    compile ('com.google.android.gms:play-services-gcm:11.0.4') {
-        force = true;
-    }
-
+    /*
+        compile('com.google.android.gms:play-services-gcm:11.0.4') {
+            force = true;
+        }*/
+    /*
+        compile ('com.google.android.gms:play-services-gcm:11.6.2') {
+            force = true;
+        }
+        */
     compile 'com.google.firebase:firebase-core:11.0.4'
-
-
 }
 
 // Run this once to be able to run the application with BUCK
