--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^5.2.0",
+    "link": "^0.1.5",
     "native-base": "^2.3.2",
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
     "react-base": "^0.2.0",
     "react-bootstrap-table": "^4.0.6",
-    "react-native": "0.49.3",
+    "react-native": "^0.49.5",
     "react-native-drawer": "^2.5.0",
     "react-native-dropdown": "0.0.6",
     "react-native-exit-app": "^1.0.0",
