--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "dependencies": {
     "@expo/vector-icons": "^5.2.0",
     "link": "^0.1.5",
+    "moment": "^2.20.1",
     "native-base": "^2.3.2",
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
     "react-base": "^0.2.0",
     "react-bootstrap-table": "^4.0.6",
+    "react-moment": "^0.6.8",
     "react-native": "^0.49.5",
     "react-native-drawer": "^2.5.0",
     "react-native-dropdown": "0.0.6",
