--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-fbsdk": "^0.6.3",
     "react-native-fcm": "^10.0.3",
     "react-native-foldview": "^1.1.1",
+    "react-native-git-upgrade": "^0.2.7",
+    "react-native-i18n": "^2.0.12",
     "react-native-material-dropdown": "^0.5.2",
     "react-native-radio-button": "^2.0.1",
     "react-native-router-flux": "^4.0.0-beta.22",
