--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,6 +3,12 @@
 
 pod 'Firebase/Core'
 pod 'Firebase/Messaging'
+pod 'FBSDKLoginKit'
+  pod 'FBSDKShareKit'
+
+
+#pod 'RNI18n', :path => '../node_modules/react-native-i18n'
+
 
 target 'brandprofilingApp' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
@@ -12,6 +18,9 @@ target 'brandprofilingApp' do
 
   target 'brandprofilingAppTests' do
     inherit! :search_paths
+    #pod 'react-native-fbsdk', :path => '../node_modules/react-native-fbsdk'
+
+    #pod 'react-native-fcm', :path => '../node_modules/react-native-fcm'
     # Pods for testing
   end
 
