--- a/package.json
+++ b/package.json
@@ -7,17 +7,46 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^8.0.0",
+    "link": "^0.1.5",
     "moment": "^2.22.2",
-    "react-native-htmltext": "^0.1.2",
+    "native-base": "^2.8.1",
+    "prop-types": "^15.6.2",
+    "react": "16.5.2",
+    "react-base": "^0.2.0",
+    "react-bootstrap-table": "^4.3.1",
+    "react-moment": "^0.8.1",
+    "react-native": "^0.56.0rea",
+    "react-native-app-intro-slider": "^1.0.1",
+    "react-native-drawer": "^2.5.1",
+    "react-native-dropdown": "0.0.6",
+    "react-native-exit-app": "^1.0.0",
+    "react-native-fbsdk": "^0.8.0",
+    "react-native-fcm": "^16.2.3",
+    "react-native-foldview": "^1.2.1",
+    "react-native-git-upgrade": "^0.2.7",
     "react-native-htmlview": "^0.13.0",
+    "react-native-i18n": "^2.0.15",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-radio-button": "^2.0.1",
+    "react-native-router-flux": "^4.0.5",
+    "react-native-selectbox": "^0.1.2",
+    "react-native-selectme": "^1.2.3",
+    "react-native-simple-radio-button": "^2.7.3",
+    "react-native-simple-toast": "0.0.8",
+    "react-native-switch-pro": "^1.0.1-beta",
+    "react-native-vector-icons": "^6.0.1",
     "react-native-webview": "^1.0.8",
     "render-if": "^0.1.1"
   },
   "devDependencies": {
-    "babel-jest": "21.2.0",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "21.2.1",
-    "react-test-renderer": "16.0.0-beta.5"
+    "babel-jest": "23.6.0",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-react-native": "^5.0.2",
+    "jest": "23.6.0",
+    "react-test-renderer": "16.5.2",
+    "react-transform-hmr": "^1.0.4",
+    "schedule": "^0.4.0"
   },
   "jest": {
     "preset": "react-native"
