--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-moment": "^0.8.1",
     "react-native": "^0.56.0rea",
     "react-native-app-intro-slider": "^1.0.1",
+    "react-native-auto-height-image": "^1.0.5",
     "react-native-drawer": "^2.5.1",
     "react-native-dropdown": "0.0.6",
     "react-native-exit-app": "^1.0.0",
